--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
+aiohttp==3.8.1
+aiosignal==1.2.0
+asn1crypto==1.5.1
+async-timeout==4.0.2
+attrs==21.4.0
 Brotli==1.0.9
 cachetools==5.0.0
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.1.2
+cloud-sql-python-connector==0.6.0
 colorama==0.4.4
 companies==1.0.0
+cryptography==36.0.2
 dash==2.3.1
 dash-bootstrap-components==1.1.0
 dash-core-components==2.0.0
@@ -12,30 +20,44 @@ dash-html-components==2.0.0
 dash-table==5.0.0
 Flask==2.1.1
 Flask-Compress==1.11
+frozenlist==1.3.0
 google-api-core==2.7.1
+google-api-python-client==2.43.0
 google-auth==2.6.2
+google-auth-httplib2==0.1.0
 google-cloud-core==2.2.3
 google-cloud-storage==2.2.1
 google-crc32c==1.3.0
 google-resumable-media==2.3.2
 googleapis-common-protos==1.56.0
+greenlet==1.1.2
+httplib2==0.20.4
 idna==3.3
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
 MarkupSafe==2.1.1
+multidict==6.0.2
 numpy==1.22.3
 pandas==1.4.2
+pg8000==1.24.1
 plotly==5.7.0
 protobuf==3.20.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycparser==2.21
+pyOpenSSL==22.0.0
+pyparsing==3.0.7
 python-dateutil==2.8.2
 pytz==2022.1
 requests==2.27.1
 rsa==4.8
+scramp==1.4.1
 six==1.16.0
+SQLAlchemy==1.4.35
 tenacity==8.0.1
+uritemplate==4.1.1
 urllib3==1.26.9
 Werkzeug==2.1.1
+yarl==1.7.2
 zipp==3.8.0
