--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.8.1
 aiosignal==1.2.0
+alpaca-trade-api==2.0.0
 asn1crypto==1.5.1
 async-timeout==4.0.2
 attrs==21.4.0
@@ -18,6 +19,7 @@ dash-bootstrap-components==1.1.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
+deprecation==2.1.0
 Flask==2.1.1
 Flask-Compress==1.11
 frozenlist==1.3.0
@@ -37,8 +39,10 @@ importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
 MarkupSafe==2.1.1
+msgpack==1.0.3
 multidict==6.0.2
 numpy==1.22.3
+packaging==21.3
 pandas==1.4.2
 pg8000==1.24.1
 plotly==5.7.0
@@ -50,6 +54,7 @@ pyOpenSSL==22.0.0
 pyparsing==3.0.7
 python-dateutil==2.8.2
 pytz==2022.1
+PyYAML==6.0
 requests==2.27.1
 rsa==4.8
 scramp==1.4.1
@@ -58,6 +63,8 @@ SQLAlchemy==1.4.35
 tenacity==8.0.1
 uritemplate==4.1.1
 urllib3==1.26.9
+websocket-client==1.3.2
+websockets==10.2
 Werkzeug==2.1.1
 yarl==1.7.2
 zipp==3.8.0
